# Sunshine

./: CMakeLists.txt  DOCKER_README.md  README.md  vite.config.js
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci-flatpak.yml  ci-homebrew.yml  ci-linux.yml  ci-windows.yml  ci.yml  localize.yml
cmake/compile_definitions/: common.cmake  linux.cmake  windows.cmake
cmake/packaging/: common.cmake  unix.cmake  windows.cmake  windows_nsis.cmake
cmake/prep/: build_version.cmake  constants.cmake  options.cmake  special_package_configuration.cmake
cmake/targets/: common.cmake  macos.cmake  windows.cmake
docs/: Doxyfile
packaging/: audiosvchost.rb
packaging/linux/: dev.lizardbyte.app.AudioSvcHost.desktop  dev.lizardbyte.app.AudioSvcHost.metainfo.xml  dev.lizardbyte.app.AudioSvcHost.terminal.desktop
packaging/linux/fedora/: Sunshine.spec
scripts/: linux_build.sh
src/: config.cpp  config.h  confighttp.cpp  confighttp.h  crypto.cpp  display_device.cpp  display_device.h  entry_handler.cpp  entry_handler.h  httpcommon.cpp  input.cpp  logging.cpp  logging.h  main.cpp  main.h  network.cpp  network.h  nvhttp.cpp  nvhttp.h  process.cpp  process.h  rtsp.cpp  stream.cpp  system_tray.cpp  system_tray.h  upnp.cpp  video.cpp  video_colorspace.cpp  video_colorspace.h
src/nvenc/: nvenc_utils.cpp  nvenc_utils.h
src/platform/: common.h
src/platform/linux/: graphics.cpp  (+2 more)
tests/: CMakeLists.txt  tests_environment.h
tests/unit/: test_entry_handler.cpp  test_logging.cpp
tools/: CMakeLists.txt  audiosvchostsvc.cpp
(+16 files in other folders)
